--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
     </div>
 
     <!-- JS Files -->
-    <script type="module" src="../js/listeners.js"></script>
+    <script type="module" src="./js/listeners.js"></script>
 </body>
 
 </html>
